verify changelog in release pipeline (#1690)

--- a/eng/pipelines/templates/steps/publish-release.yaml
+++ b/eng/pipelines/templates/steps/publish-release.yaml
@@ -8,6 +8,14 @@ parameters:
 steps:
   - pwsh: |
       $currentVersion = node -p -e "require('./packages/${{ parameters.PackagePath }}/package.json').version"
+      Write-Host "##vso[task.setvariable variable=currentVersion]$currentVersion"
+    displayName: "Get Current Version"
+  - template: /eng/pipelines/templates/steps/verify-changelog.yml
+    parameters:
+      PackagePath: ${{ parameters.PackagePath }}
+      VersionString: $(currentVersion)
+  - pwsh: |
+      $currentVersion = node -p -e "require('./packages/${{ parameters.PackagePath }}/package.json').version"
       $releaseNotes = "${{ parameters.ReleaseNotes }}"
       if ('${{ parameters.PublishDevVersion }}' -eq 'true') {
         $currentVersion="$currentVersion-$(Build.BuildNumber)"
