fix nightly build

--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -49,24 +49,24 @@
   "homepage": "https://github.com/Azure/autorest.go#readme",
   "readme": "https://github.com/Azure/autorest.go/blob/main/readme.md",
   "devDependencies": {
-    "@azure-tools/azure-http-specs": "0.1.0-alpha.29",
-    "@azure-tools/typespec-autorest": "0.60.0",
-    "@azure-tools/typespec-azure-core": "0.60.0",
-    "@azure-tools/typespec-azure-resource-manager": "0.60.0",
-    "@azure-tools/typespec-client-generator-core": "0.60.2",
+    "@azure-tools/azure-http-specs": "0.1.0-alpha.30-dev.5",
+    "@azure-tools/typespec-autorest": "0.61.0-dev.1",
+    "@azure-tools/typespec-azure-core": "0.61.0-dev.6",
+    "@azure-tools/typespec-azure-resource-manager": "0.61.0-dev.1",
+    "@azure-tools/typespec-client-generator-core": "0.61.0-dev.10",
     "@types/node": "catalog:",
-    "@typespec/compiler": "1.4.0",
-    "@typespec/events": "0.74.0",
-    "@typespec/http": "1.4.0",
-    "@typespec/http-specs": "0.1.0-alpha.26",
-    "@typespec/openapi": "1.4.0",
-    "@typespec/rest": "0.74.0",
-    "@typespec/spector": "0.1.0-alpha.18",
-    "@typespec/sse": "0.74.0",
-    "@typespec/streams": "0.74.0",
+    "@typespec/compiler": "1.5.0-dev.14",
+    "@typespec/events": "0.75.0-dev.0",
+    "@typespec/http": "1.5.0-dev.0",
+    "@typespec/http-specs": "0.1.0-alpha.27-dev.2",
+    "@typespec/openapi": "1.5.0-dev.0",
+    "@typespec/rest": "0.75.0-dev.0",
+    "@typespec/spector": "0.1.0-alpha.19-dev.1",
+    "@typespec/sse": "0.75.0-dev.0",
+    "@typespec/streams": "0.75.0-dev.0",
     "@typespec/tspd": "0.73.0",
-    "@typespec/versioning": "0.74.0",
-    "@typespec/xml": "0.74.0",
+    "@typespec/versioning": "0.75.0-dev.0",
+    "@typespec/xml": "0.75.0-dev.0",
     "@vitest/coverage-v8": "catalog:",
     "@vitest/ui": "catalog:",
     "eslint": "catalog:",
@@ -75,13 +75,35 @@
     "vitest": "catalog:"
   },
   "peerDependencies": {
-    "@azure-tools/typespec-client-generator-core": "^0.60.0",
-    "@typespec/compiler": "^1.4.0",
-    "@typespec/http": "^1.4.0"
+    "@azure-tools/typespec-client-generator-core": "0.61.0-dev.10",
+    "@typespec/compiler": "1.5.0-dev.14",
+    "@typespec/http": "1.5.0-dev.0"
   },
   "dependencies": {
     "@azure-tools/codegen": "catalog:",
     "@azure-tools/linq": "catalog:",
     "source-map-support": "0.5.21"
+  },
+  "overrides": {
+    "@typespec/compiler": "1.5.0-dev.14",
+    "@typespec/http": "1.5.0-dev.0",
+    "@typespec/openapi": "1.5.0-dev.0",
+    "@typespec/rest": "0.75.0-dev.0",
+    "@typespec/versioning": "0.75.0-dev.0",
+    "@typespec/xml": "0.75.0-dev.0",
+    "@typespec/events": "0.75.0-dev.0",
+    "@typespec/sse": "0.75.0-dev.0",
+    "@typespec/streams": "0.75.0-dev.0",
+    "@typespec/http-specs": "0.1.0-alpha.27-dev.2",
+    "@typespec/spector": "0.1.0-alpha.19-dev.1",
+    "@typespec/spec-api": "0.1.0-alpha.10-dev.0",
+    "@azure-tools/typespec-client-generator-core": "0.61.0-dev.10",
+    "@azure-tools/typespec-azure-core": "0.61.0-dev.6",
+    "@azure-tools/typespec-azure-resource-manager": "0.61.0-dev.1",
+    "@azure-tools/typespec-azure-rulesets": "0.61.0-dev.0",
+    "@azure-tools/typespec-autorest": "0.61.0-dev.1",
+    "@azure-tools/azure-http-specs": "0.1.0-alpha.30-dev.5",
+    "@typespec/eslint-config-typespec": "0.56.0-dev.1",
+    "@typespec/library-linter": "0.75.0-dev.0"
   }
 }
