--- a/eng/pipelines/sdk-regenerate.yml
+++ b/eng/pipelines/sdk-regenerate.yml
@@ -15,6 +15,9 @@ parameters:
 - name: ServiceFilter
   type: string
   default: '.*'
+- name: azure-sdk-for-go-branch
+  type: string
+  default: 'main'
 
 variables:
   - template: /eng/pipelines/templates/variables/globals.yml
@@ -31,7 +34,7 @@ resources:
       type: github
       name: Azure/azure-sdk-for-go
       endpoint: azure
-      ref: main
+      ref: ${{ parameters.azure-sdk-for-go-branch }}
 
 jobs:
 - job: Generate_SDK
