--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -75,21 +75,9 @@
     "vitest": "catalog:"
   },
   "peerDependencies": {
-    "@azure-tools/typespec-autorest": ">=0.61.0 <1.0.0",
-    "@azure-tools/typespec-azure-core": ">=0.61.0 <1.0.0",
-    "@azure-tools/typespec-azure-resource-manager": ">=0.61.0 <1.0.0",
-    "@azure-tools/typespec-azure-rulesets": ">=0.61.0 <1.0.0",
-    "@azure-tools/typespec-client-generator-core": ">=0.61.0 <1.0.0",
-    "@azure-tools/typespec-liftr-base": ">=0.10.0 <1.0.0",
+    "@azure-tools/typespec-client-generator-core": "^0.61.0",
     "@typespec/compiler": "^1.5.0",
-    "@typespec/http": "^1.5.0",
-    "@typespec/openapi": "^1.5.0",
-    "@typespec/rest": ">=0.75.0 <1.0.0",
-    "@typespec/versioning": ">=0.75.0 <1.0.0",
-    "@typespec/xml": ">=0.75.0 <1.0.0",
-    "@typespec/events": ">=0.75.0 <1.0.0",
-    "@typespec/sse": ">=0.75.0 <1.0.0",
-    "@typespec/streams": ">=0.75.0 <1.0.0"
+    "@typespec/http": "^1.5.0"
   },
   "dependencies": {
     "@azure-tools/codegen": "catalog:",
