change the default value of UseLatestSpec to true

--- a/eng/pipelines/sdk-regenerate.yml
+++ b/eng/pipelines/sdk-regenerate.yml
@@ -10,7 +10,7 @@ schedules:
 
 parameters:
 - name: UseLatestSpec
-  default: false
+  default: true
   type: boolean
 - name: ServiceFilter
   type: string
