--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -49,7 +49,7 @@
   "homepage": "https://github.com/Azure/autorest.go#readme",
   "readme": "https://github.com/Azure/autorest.go/blob/main/readme.md",
   "devDependencies": {
-    "@azure-tools/azure-http-specs": "0.1.0-alpha.33",
+    "@azure-tools/azure-http-specs": "0.1.0-alpha.34-dev.4",
     "@azure-tools/typespec-autorest": "0.63.0",
     "@azure-tools/typespec-azure-core": "0.63.0",
     "@azure-tools/typespec-azure-resource-manager": "0.63.0",
