--- a/packages/typespec-go/test/tsp/web2/Web.Management/tspconfig.yaml
+++ b/packages/typespec-go/test/tsp/web2/Web.Management/tspconfig.yaml
@@ -18,8 +18,8 @@ options:
     generate-sample: true
     flavor: "azure"
   "@azure-tools/typespec-java":
-    emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-appservice"
-    namespace: "com.azure.resourcemanager.appservice"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-appservice-generated"
+    namespace: "com.azure.resourcemanager.appservice.generated"
     service-name: "AppService" # human-readable service name, whitespace allowed
     flavor: azure
   "@azure-tools/typespec-ts":
