--- a/packages/typespec-go/test/tsp/web2/Web.Management/tspconfig.yaml
+++ b/packages/typespec-go/test/tsp/web2/Web.Management/tspconfig.yaml
@@ -32,7 +32,7 @@ options:
     service-dir: "sdk/resourcemanager/appservice"
     emitter-output-dir: "{output-dir}/{service-dir}/armappservice"
     module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armappservice"
-    fix-const-stuttering: true
+    fix-const-stuttering: false
     flavor: "azure"
     generate-samples: true
     generate-fakes: true
