--- a/packages/autorest.gotest/test/integrationtest/output/agrifood/armagrifood/__debug/go-tester.yaml
+++ b/packages/autorest.gotest/test/integrationtest/output/agrifood/armagrifood/__debug/go-tester.yaml
@@ -1304,7 +1304,7 @@ schemas:
         go:
           name: time.Time
           description: The timestamp of resource creation (UTC).
-          internalTimeType: dateTimeRFC3339
+          internalTimeType: RFC3339
       protocol: {}
     - &ref_41
       type: date-time
@@ -1318,7 +1318,7 @@ schemas:
         go:
           name: time.Time
           description: The timestamp of resource last modification (UTC)
-          internalTimeType: dateTimeRFC3339
+          internalTimeType: RFC3339
       protocol: {}
   uris:
     - &ref_16
