--- a/packages/autorest.gotest/test/integrationtest/output/signalr/armsignalr/__debug/test-modeler-pre.yaml
+++ b/packages/autorest.gotest/test/integrationtest/output/signalr/armsignalr/__debug/test-modeler-pre.yaml
@@ -1804,7 +1804,7 @@ schemas:
         go:
           name: time.Time
           description: The timestamp of resource creation (UTC).
-          internalTimeType: dateTimeRFC3339
+          internalTimeType: RFC3339
       protocol: {}
     - &ref_60
       type: date-time
@@ -1818,7 +1818,7 @@ schemas:
         go:
           name: time.Time
           description: The timestamp of resource last modification (UTC)
-          internalTimeType: dateTimeRFC3339
+          internalTimeType: RFC3339
       protocol: {}
   objects:
     - &ref_175
