Remove azure-tools/linq dependency from tsp emitter
Switched to using native ts functionality.

--- a/packages/codegen.go/package.json
+++ b/packages/codegen.go/package.json
@@ -7,8 +7,7 @@
     "build": "tsc -p ."
   },
   "dependencies": {
-    "@azure-tools/codegen": "catalog:",
-    "@azure-tools/linq": "catalog:"
+    "@azure-tools/codegen": "catalog:"
   },
   "devDependencies": {
     "typescript": "catalog:"
