--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -12,9 +12,11 @@ catalog:
   "@azure-tools/linq": ^3.1.263
   "@eslint/js": ^9.39.1
   "@types/node": ^20.19.25
+  "@types/semver": "^7.7.1"
   "@vitest/coverage-v8": ^3.1.1
   "@vitest/ui": ^3.1.1
   eslint: ^9.39.1
+  semver: "^7.7.1"
   typescript: ^5.9.3
   typescript-eslint: ^8.47.0
   vitest: ^3.1.1
